--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "pino": "^10.1.0",
+    "pino-http": "^11.0.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@types/node": "^24.10.1",
     "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
+    "pino-pretty": "^13.1.2",
     "prisma": "^5.22.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
