Banco com Dados Mock para testar todos os cenários #6

--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "ts-jest": "^29.4.5",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
